--- a/frontend-weather-app/package.json
+++ b/frontend-weather-app/package.json
@@ -20,7 +20,8 @@
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "jest": "^28.1.3"
   },
   "private": true
 }
